@@ -18,14 +18,15 @@ package org.openrewrite.javascript.rpc;
 import org.intellij.lang.annotations.Language;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.openrewrite.*;
-import org.openrewrite.config.Environment;
-import org.openrewrite.internal.ManagedThreadLocal;
 import org.openrewrite.java.JavaIsoVisitor;
 import org.openrewrite.java.JavaVisitor;
 import org.openrewrite.java.tree.J;
+import org.openrewrite.javascript.JavaScriptIsoVisitor;
 import org.openrewrite.javascript.JavaScriptParser;
 import org.openrewrite.marker.Markup;
 import org.openrewrite.rpc.request.Print;
@@ -33,54 +34,48 @@ import org.openrewrite.test.RecipeSpec;
 import org.openrewrite.test.RewriteTest;
 
 import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
-import java.io.PrintStream;
+import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.openrewrite.java.Assertions.java;
+import static org.openrewrite.javascript.Assertions.*;
 import static org.openrewrite.json.Assertions.json;
 import static org.openrewrite.test.RewriteTest.toRecipe;
 import static org.openrewrite.test.SourceSpecs.text;
 
-@Disabled
 class JavaScriptRewriteRpcTest implements RewriteTest {
-
-    JavaScriptRewriteRpc client;
-    PrintStream log;
-    ManagedThreadLocal.Scope<JavaScriptRewriteRpc> scope;
+    @TempDir
+    Path tempDir;
 
     @BeforeEach
-    void before() throws FileNotFoundException {
-        this.log = new PrintStream(new FileOutputStream("rpc.java.log"));
-        this.client = JavaScriptRewriteRpc.builder(Environment.builder().build())
-          .nodePath(Path.of("node"))
-          .installationDirectory(Path.of("./rewrite/dist"))
-//          .inspectAndBreak()
-//          .timeout(Duration.ofMinutes(10))
-          .build();
-        this.scope = JavaScriptRewriteRpc.current().using(client);
-
-//        client
-//          .traceGetObjectOutput()
-//          .traceGetObjectInput(log);
+    void before() {
+        JavaScriptRewriteRpc.setFactory(JavaScriptRewriteRpc.builder()
+          .recipeInstallDir(tempDir)
+          .metricsCsv(tempDir.resolve("rpc.csv"))
+          .log(tempDir.resolve("rpc.log"))
+          .traceRpcMessages()
+//          .inspectBrk()
+        );
     }
 
     @AfterEach
-    void after() {
-        scope.close();
-        log.close();
-        client.close();
+    void after() throws IOException {
+        JavaScriptRewriteRpc.shutdownCurrent();
+        if (Files.exists(tempDir.resolve("rpc.csv"))) {
+            System.out.println(Files.readString(tempDir.resolve("rpc.csv")));
+        }
+        if (Files.exists(tempDir.resolve("rpc.log"))) {
+            System.out.println(Files.readString(tempDir.resolve("rpc.log")));
+        }
     }
 
     @Override
     public void defaults(RecipeSpec spec) {
-        spec.validateRecipeSerialization(false)
-          .cycles(1);
+        spec.validateRecipeSerialization(false);
     }
 
     @DocumentExample
@@ -89,9 +84,8 @@ class JavaScriptRewriteRpcTest implements RewriteTest {
         installRecipes();
         rewriteRun(
           spec -> spec
-            .recipe(client.prepareRecipe("org.openrewrite.example.npm.change-version",
-              Map.of("version", "1.0.0")))
-            .expectedCyclesThatMakeChanges(1),
+            .recipe(client().prepareRecipe("org.openrewrite.example.npm.change-version",
+              Map.of("version", "1.0.0"))),
           json(
             """
               {
@@ -110,12 +104,65 @@ class JavaScriptRewriteRpcTest implements RewriteTest {
         );
     }
 
+    @Test
+    void printSubtree() {
+        rewriteRun(
+          typescript(
+            "console.log('hello');",
+            spec -> spec.beforeRecipe(cu -> new JavaScriptIsoVisitor<Integer>() {
+                @Override
+                public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, Integer p) {
+                    //language=typescript
+                    assertThat(client().print(method, getCursor().getParentOrThrow())).isEqualTo("console.log('hello')");
+                    return method;
+                }
+            }.visit(cu, 0))
+          )
+        );
+    }
+
+    @SuppressWarnings("JSUnusedLocalSymbols")
+    @Test
+    void runSearchRecipe() {
+        installRecipes();
+        rewriteRun(
+          spec -> spec
+            .recipe(client().prepareRecipe("org.openrewrite.example.javascript.find-identifier",
+              Map.of("identifier", "hello"))),
+          javascript(
+            "const hello = 'world'",
+            "const /*~~>*/hello = 'world'"
+          )
+        );
+    }
+
+    @ParameterizedTest
+    @SuppressWarnings("JSUnusedLocalSymbols")
+    @ValueSource(booleans = {true, false})
+    void runSearchRecipeWithJavaRecipeActingAsPrecondition(boolean matchesPrecondition) {
+        installRecipes();
+        rewriteRun(
+          spec -> spec
+            .recipe(client().prepareRecipe("org.openrewrite.example.javascript.remote-find-identifier-with-path",
+              Map.of("identifier", "hello", "requiredPath", "hello.js"))),
+          matchesPrecondition ?
+            javascript(
+              "const hello = 'world'",
+              "const /*~~>*/hello = 'world'",
+              spec -> spec.path("hello.js")
+            ) :
+            javascript(
+              "const hello = 'world'",
+              spec -> spec.path("not-hello.js")
+            )
+        );
+    }
 
     @Test
     void printJava() {
-        assertThat(client.installRecipes(new File("rewrite/dist/test/modify-all-trees.js")))
+        assertThat(client().installRecipes(new File("rewrite/dist-fixtures/modify-all-trees.js")))
           .isEqualTo(1);
-        Recipe modifyAll = client.prepareRecipe("org.openrewrite.java.test.modify-all-trees");
+        Recipe modifyAll = client().prepareRecipe("org.openrewrite.java.test.modify-all-trees");
 
         @Language("java")
         String java = """
@@ -140,8 +187,8 @@ class JavaScriptRewriteRpcTest implements RewriteTest {
 
     @Test
     void installRecipesFromNpm() {
-        assertThat(client.installRecipes("@openrewrite/recipes-npm")).isEqualTo(1);
-        assertThat(client.getRecipes()).satisfiesExactly(
+        assertThat(client().installRecipes("@openrewrite/recipes-npm")).isEqualTo(1);
+        assertThat(client().getRecipes()).satisfiesExactly(
           d -> {
               assertThat(d.getDisplayName()).isEqualTo("Change version in `package.json`");
               assertThat(d.getOptions()).satisfiesExactly(
@@ -154,25 +201,25 @@ class JavaScriptRewriteRpcTest implements RewriteTest {
     @Test
     void getRecipes() {
         installRecipes();
-        assertThat(client.getRecipes()).isNotEmpty();
+        assertThat(client().getRecipes()).isNotEmpty();
     }
 
     @Test
     void prepareRecipe() {
         installRecipes();
-        Recipe recipe = client.prepareRecipe("org.openrewrite.example.npm.change-version",
+        Recipe recipe = client().prepareRecipe("org.openrewrite.example.npm.change-version",
           Map.of("version", "1.0.0"));
         assertThat(recipe.getDescriptor().getDisplayName()).isEqualTo("Change version in `package.json`");
     }
 
+    @SuppressWarnings("JSUnusedLocalSymbols")
     @Test
     void parseAndPrintJavaScript() {
         // language=javascript
         String source = "const two = 1 + 1";
 
-        SourceFile cu = JavaScriptParser.builder().rewriteRpc(client).build()
-          .parseInputs(List.of(Parser.Input.fromString(
-          Paths.get("test.js"), source)), null, new InMemoryExecutionContext()).findFirst().get();
+        SourceFile cu = JavaScriptParser.builder().build().parseInputs(List.of(Parser.Input.fromString(
+          Path.of("test.js"), source)), null, new InMemoryExecutionContext()).findFirst().orElseThrow();
 
         new JavaIsoVisitor<Integer>() {
             @Override
@@ -182,7 +229,7 @@ class JavaScriptRewriteRpcTest implements RewriteTest {
             }
         }.visit(cu, 0);
 
-        assertThat(client.print(cu)).isEqualTo(source);
+        assertThat(client().print(cu)).isEqualTo(source);
     }
 
     @Test
@@ -191,7 +238,7 @@ class JavaScriptRewriteRpcTest implements RewriteTest {
           text(
             "Hello Jon!",
             spec -> spec.beforeRecipe(text ->
-              assertThat(client.print(text)).isEqualTo("Hello Jon!"))
+              assertThat(client().print(text)).isEqualTo("Hello Jon!"))
           )
         );
     }
@@ -203,8 +250,8 @@ class JavaScriptRewriteRpcTest implements RewriteTest {
             "Hello Jon!",
             spec -> spec.beforeRecipe(text -> {
                 text = Markup.info(text, "INFO", null);
-                String fence = "{{" + text.getMarkers().getMarkers().get(0).getId() + "}}";
-                assertThat(client.print(text, Print.MarkerPrinter.FENCED)).isEqualTo(fence + "Hello Jon!" + fence);
+                String fence = "{{" + text.getMarkers().getMarkers().getFirst().getId() + "}}";
+                assertThat(client().print(text, Print.MarkerPrinter.FENCED)).isEqualTo(fence + "Hello Jon!" + fence);
             })
           )
         );
@@ -217,7 +264,7 @@ class JavaScriptRewriteRpcTest implements RewriteTest {
             "Hello Jon!",
             spec -> spec.beforeRecipe(text -> {
                 text = Markup.info(text, "INFO", null);
-                assertThat(client.print(text, Print.MarkerPrinter.SANITIZED)).isEqualTo("Hello Jon!");
+                assertThat(client().print(text, Print.MarkerPrinter.SANITIZED)).isEqualTo("Hello Jon!");
             })
           )
         );
@@ -230,7 +277,7 @@ class JavaScriptRewriteRpcTest implements RewriteTest {
             "Hello Jon!",
             spec -> spec.beforeRecipe(text -> {
                 text = Markup.info(text, "INFO", null);
-                assertThat(client.print(text, Print.MarkerPrinter.DEFAULT)).isEqualTo("~~(INFO)~~>Hello Jon!");
+                assertThat(client().print(text, Print.MarkerPrinter.DEFAULT)).isEqualTo("~~(INFO)~~>Hello Jon!");
             })
           )
         );
@@ -247,13 +294,54 @@ class JavaScriptRewriteRpcTest implements RewriteTest {
           """;
         rewriteRun(
           json(packageJson, spec -> spec.beforeRecipe(json ->
-            assertThat(client.print(json)).isEqualTo(packageJson.trim())))
+            assertThat(client().print(json)).isEqualTo(packageJson.trim())))
+        );
+    }
+
+    @SuppressWarnings({"TypeScriptCheckImport", "JSUnusedLocalSymbols"})
+    @Test
+    void javaTypeAcrossRpcBoundary(@TempDir Path projectDir) {
+        installRecipes();
+        rewriteRun(
+          spec -> spec
+            .recipe(client().prepareRecipe("org.openrewrite.example.javascript.mark-class-types", Map.of())),
+          npm(
+            projectDir,
+            typescript(
+              """
+                import _ from 'lodash';
+                const result = _.map([1, 2, 3], n => n * 2);
+                """,
+              """
+                import /*~~(_.LoDashStatic)~~>*/_ from 'lodash';
+                const result = /*~~(_.LoDashStatic)~~>*/_.map([1, 2, 3], n => n * 2);
+                """
+            ),
+            packageJson(
+              """
+                {
+                  "name": "test-project",
+                  "version": "1.0.0",
+                  "dependencies": {
+                    "lodash": "^4.17.21"
+                  },
+                  "devDependencies": {
+                    "@types/lodash": "^4.14.195"
+                  }
+                }
+                """
+            )
+          )
         );
     }
 
     private void installRecipes() {
-        File exampleRecipes = new File("rewrite/dist/test/example-recipe.js");
+        File exampleRecipes = new File("rewrite/dist-fixtures/example-recipe.js");
         assertThat(exampleRecipes).exists();
-        assertThat(client.installRecipes(exampleRecipes)).isGreaterThan(0);
+        assertThat(client().installRecipes(exampleRecipes)).isGreaterThan(0);
+    }
+
+    private JavaScriptRewriteRpc client() {
+        return JavaScriptRewriteRpc.getOrStart();
     }
 }
